<?xml version="1.0"?>
<package>
  <name>smach_tests</name>
  <version>0.1.0</version>
  <description>Playground for testing the SMACH executive</description>

  <maintainer email="knowrob@tenorth.de">Moritz Tenorth</maintainer>
  <license>BSD</license>

  <author>Moritz Tenorth</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>json_prolog</build_depend>
  <build_depend>json_prolog_msgs</build_depend>
  <build_depend>knowrob_common</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>json_prolog</run_depend>
  <run_depend>json_prolog_msgs</run_depend>
  <run_depend>knowrob_common</run_depend>

</package>
